--- a/mybatisplus-joinquery-one2one/pom.xml
+++ b/mybatisplus-joinquery-one2one/pom.xml
@@ -47,6 +47,18 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.19</version>
+        </dependency>
+
+        <dependency>
+            <groupId>xin.altitude.cms</groupId>
+            <artifactId>ucode-cms-common</artifactId>
+            <version>1.5.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -64,6 +76,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.1</version>
             </plugin>
         </plugins>
     </build>
